fix: skips publish to npm in all steps

--- a/package.json
+++ b/package.json
@@ -113,14 +113,22 @@
       "@semantic-release/github"
     ],
     "prepare": [
+      "@semantic-release/npm",
+      "@semantic-release/changelog",
+      [
+        "@semantic-release/git",
+        {
+          "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
+        }
+      ]
+    ],
+    "plugins": [
       [
         "@semantic-release/npm",
         {
           "npmPublish": false
         }
-      ],
-      "@semantic-release/changelog",
-      "@semantic-release/git"
+      ]
     ]
   },
   "repository": "git@github.com:RedHatInsights/ocp-advisor-frontend.git",
